fixed a few spelling mistakes, added some margins on homepage, created a background for text on photo gallery page to make it more visible, added alts to imgs on homepage

--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,8 @@ img {
     background-image: url("/img/colorfulBackground.jpg");
     color: blueviolet;
 }
+
+.phototext {
+    background-color: white;
+    opacity: .7;
+}
